# icfp2023

./: .gitignore  Cargo.toml  Make.zsh  README.md
problem/example/: example-problem.json  example-solution.json
solution/best/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+50 more)
src/: draw.rs  lib.rs  main.rs  prelude.rs  problem.rs  solution.rs  solver.rs  solver_sa.rs  stats.rs
stats/: best-score.json  problems.data  problems.gnuplot  sa.gnuplot  score-best.data  score.gnuplot
