[package]
name = "icfp2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
clap = { version = "4.3.8", features = ["derive"] }
derive_more = "0.99.17"
ordered-float = { version = "3.7.0", features = ["serde"] }
approx = "0.5.1"
rayon = "1.7.0"
indicatif = "0.17.5"
rand = "0.8.5"
svg = "0.13.1"
fd-lock = "4.0.0"


# [profile.release]
# debug = 1
